--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>From vscode.dev</h1>
     <h1>From Github fix</h1>
     <h1>From Ipad</h1>
+    <h1>From Computer</h1>
 </head>
 <body>
     
