--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>From Github fix</h1>
     <h1>From Ipad</h1>
     <h1>From Computer</h1>
+    <h1>test github pages</h1>
 </head>
 <body>
     
